--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="l-header" id="header">
         <nav class="nav bd-container">
             <a href="#" class="nav__logo">
-                <h3>Foodcity</h3>
+                <h2>Foodcity</h2>
             </a>
 
             <div class="nav__menu" id="nav-menu">
@@ -32,7 +32,7 @@
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
                     <li class="nav__item"><a href="#menu" class="nav__link">Menu</a></li>
-                    <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
+                    <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
 
                 </ul>
             </div>
@@ -524,6 +524,7 @@
                     <a _blank href="https://www.twitter.com/shoaibaminsaad/" class="footer__social"><i
                             class='bx bxl-twitter'></i></a>
                 </div>
+
             </div>
 
             <div class="footer__content">
@@ -549,7 +550,7 @@
             <div class="footer__content">
                 <h3 class="footer__title">Address</h3>
                 <ul>
-                    <li>KDA Avenue,9100</li>
+                    <li>51, KDA Avenue,9100</li>
                     <li>Khulna, Bangladesh</li>
                     <li>+880 177 777 888</li>
                     <li>info@foodcity.com</li>
@@ -560,11 +561,6 @@
         <p class="footer__copy">&#169; Foodcity | All right reserved</p>
     </footer>
 
-    <!--========== SCROLL REVEAL ==========-->
-    <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
-
-    <!--========== MAIN JS ==========-->
-    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
