--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
             </div>
         </div>
 
-        <p class="footer__copy">&#169; Foodcity | All right reserved</p>
+        <p class="footer__copy">copyright &#169; 2021 | All right reserved Foodcity</p>
     </footer>
 
 </body>
